# Droidspaces-OSS

./: .gitattributes  Makefile  README.md
.github/workflows/: ci.yml
Android/app/: build.gradle.kts
Android/app/src/main/assets/: post_extract_fixes.sh
Android/app/src/main/assets/boot-module/: module.prop  post-fs-data.sh
Android/app/src/main/java/com/anland/consumer/: MainActivity.kt
Android/app/src/main/java/com/droidspaces/app/: MainActivity.kt
Android/app/src/main/java/com/droidspaces/app/ui/component/: AnlandView.kt  ContainerCard.kt  RootfsRepoSheet.kt
Android/app/src/main/java/com/droidspaces/app/ui/navigation/: DroidspacesNavigation.kt
Android/app/src/main/java/com/droidspaces/app/util/: BinaryInstaller.kt  Constants.kt  ContainerManager.kt  DisplayDaemonManager.kt  DroidspacesChecker.kt  PreferencesManager.kt
Android/app/src/main/jni/: CMakeLists.txt  display_consumer.c  display_consumer.h  ds_wayland_bridge.c
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-v27/: themes.xml
Documentation/: Features.md  Graphics-and-Audio.md
Documentation/zh-CN/: Features.md  Graphics-and-Audio.md
scripts/: build_native_c.sh  build_pulseaudio.sh  copy_pa_host.sh  setup-termux.sh
src/: config.c  container.c  documentation.c  droidspace.h  environment.c  main.c  mount.c  utils.c  virgl-android.c  x11.c
src/android/: android.c  pulseaudio.c  wayland.c  x11.c
src/include/: droidspace.h
src/net/: netlink.c  network.c
tools/: fix-anland-display.bat  fix-anland-display.sh
(+10 files in other folders)
